--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Oswald&family=Sunflower:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Oswald&family=Sunflower:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
+
 
     <!-- swiper demo -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
