--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             </div>
 
                             <div class="etc-box">
-                                <p><a href="https://drive.google.com/file/d/1vmHH2EFSp3CYKgDEuz0ZhKzM-OdjBjWG/view?usp=share_link"
+                                <p><a href="https://drive.google.com/file/d/1Z2A1ltoJGxFkrH3fUpkhxJ39EfiKKGL1/view?usp=share_link"
                                         target="_blank">If you want to know more about me, Click to Resume</a></p>
                             </div>
 
@@ -331,7 +331,7 @@
 
                         <div class="con-content">
                             <p id="con-content-title"><a href="https://minkyung05.github.io/project4_react_jordan/" target="_blank">Learn more</a></p>
-                            <p>서브페이지는 메인메뉴 컨텐츠를 클릭하시면 확인하실 수 있습니다.</p>
+                            <!-- <p>서브페이지는 메인메뉴 컨텐츠를 클릭하시면 확인하실 수 있습니다.</p> -->
                             <img src="img/nike-short.PNG" alt="">
 
 
@@ -771,7 +771,8 @@
                                 <li>Photoshop</li>
                                 <li>illustrator</li>
                                 <li>Premiere Pro</li>
-                                <li>Pigma/Oven</li>
+                                <li>Figma/Oven</li>
+                                <li>Photography</li>
                             </ul>
                         </div>
 
@@ -779,9 +780,9 @@
 
 
                         <div class="con-content">
-                            <p id="con-content-title"><a href="https://www.behance.net/?tracking_source=nav20"
+                            <p id="con-content-title"><a href="https://www.behance.net/meankyungkim"
                                     target="_blank">Learn more</a></p>
-                            <img src="img/design.PNG" alt="">
+                            <img src="img/portfolio screenshot.png" alt="" id="etc-img">
 
 
 
@@ -791,7 +792,8 @@
                                 <div class="con-content-text2">
                                     <p>지금까지 완성했던 다양한 디자인 작업물</p>
                                     <p>로고디자인부터 포스터 및 영상미디어편집까지</p>
-                                    <p>UI/UX작업을 위한 개인 피그마 프로젝트 수행</p>
+                                    <p>프로젝트 완성을 위한 UI/UX 프로토타입 제작</p>
+                                    <p>사진 및 동영상 촬영/편집 가능</p>
                                 </div>
                             </div>
 
@@ -803,7 +805,7 @@
                                         <li><a>#</a> Photoshop을 이용한 이미지편집 및 콘텐츠 제작 가능</li>
                                         <li><a>#</a> illustrator를 활용하여 그래픽디자인 구현 가능</li>
                                         <li><a>#</a> Premiere Pro로 동영상 편집 및 기본 작업 가능</li>
-                                        <li><a>#</a> Pigma/Oven로 uiux프로토타입 제작 가능</li>
+                                        <li><a>#</a> Figma/Oven로 uiux프로토타입 제작 가능</li>
                                     </ul>
                                 </div>
                             </div>
@@ -817,23 +819,23 @@
                                 <!-- <p id="swiper-container-title">Detail</p> -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="img/avatar1.PNG" alt="">
+                                        <img src="img/pp1.png" alt="">
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <img src="img/avatar2.png" alt="">
+                                        <img src="img/pp2.png" alt="">
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <img src="img/avatar3.PNG" alt="">
+                                        <img src="img/pp3.png" alt="">
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <img src="img/avatar4.PNG" alt="">
+                                        <img src="img/pp4.png" alt="">
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <img src="img/avatar5.PNG" alt="">
+                                        <img src="img/pp5.png" alt="">
                                     </div>
 
 
@@ -846,10 +848,23 @@
                         </div>
 
                         <p id="con-content-title"><a
-                                href="https://drive.google.com/file/d/1NeN9jhzwuYv3cMNLQqEoqKNnYbkEBSn4/view?usp=share_link"
+                                href="https://drive.google.com/file/d/1_fFfr3AjsAH3U7UhiOI-hklMab6WyT4v/view?usp=share_link"
                                 target="_blank">Learn more</a></p>
 
 
+
+                                <div id="more">
+                                    <div class="video">
+                                        <img src="https://seeklogo.com/images/V/vimeo-icon-logo-441934AEB1-seeklogo.com.png" alt="">
+                                        <a href="https://vimeo.com/manage/videos/731058453"> Click to Watch</a>
+
+                                    </div>
+
+                                    <div class="video">
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt="">
+                                        <a href="https://instagram.com/sajin_chuok?igshid=NTc4MTIwNjQ2YQ=="> Click to See</a>
+                                    </div>
+                                </div>
 
                     </div>
 
@@ -940,7 +955,7 @@
         <div class="bottom-footer">
             <div class="bottom-footer-line">
                 <a>Kimminkyung:+8210-5109-7542</a>
-                <a>business.kim@gmail.com</a>
+                <a>meankyungkim@gmail.com</a>
             </div>
             <div class="bottom-footer-line">
                 <a>Instagram</a>
