--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <p class="send">안녕하세요.</p>
                             <p class="receive">반갑습니다.</p>
                             <p class="send">세상과 소통하는 UI/UX 디자이너 김민경입니다.</p>
-                            <p class="receive">당신에게 개발이란 무엇인가요?</p>
+                            <p class="receive">당신에게 디자인이란 무엇인가요?</p>
                             <p class="receive"><img src="https://blog.kakaocdn.net/dn/bBDR3G/btqWn2ACh0q/Jie1FADC2F7YyWVkb5tYX1/img.png" alt=""></p>
                             <p class="send">
                                 <i class="fa-solid fa-user"></i>
