--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
             </div>
 
             <div class="bottom-footer-line">
-                <a>2023.KIMMINKYUNG. Frontend Developer Portfolio Website.</a>
+                <a>2023.KIMMINKYUNG. My Amazing Portfolio Website.</a>
                 <a>Thank you so much!</a>
             </div>
 
