--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
                 <div class="con">
                     <div class="inner-con">
                         <div class="con-title">
-                            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/6ba152170104355.6458aaa7a2de4.jpg"
+                            <img src="img/myicon.png"
                                 alt="">
                             <p>Additional Skills</p>
                             <p>"I want to make a something beneficial to others"</p>
