--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <li><a href="#pj-img2">Grammy Awards</a></li>
                             <li><a href="#pj-img3">Amazon Books</a></li>
                             <li><a href="#pj-img4">Avatar II</a></li>
-                            <li><a href="#pj-img5">Etc.</a></li>
+                            <li><a href="#pj-img5">Design Project.</a></li>
                             <li>Instagram / Facebook / Blog</li>
                         </ul>
                     </div>
@@ -103,14 +103,14 @@
 
 
                     <div class="main-content">
-                        <span>안녕ha세yo.</span>
-                        <span>저는 金민Kyung입니다.</span>
+                        <!-- <span>안녕하세요! 저의 포트폴리오에 오신것을 환영합니다. </span> -->
+                        <span>Welcome to my Portfolio.</span>
                         <br><br>
                         <div class="main-content-detail">
                             <p class="send">안녕하세요.</p>
-                            <p class="receive">반갑습니다.</p>
-                            <p class="send">세상과 소통하는 UI/UX 디자이너 김민경입니다.</p>
-                            <p class="receive">당신에게 디자인이란 무엇인가요?</p>
+                            <p class="receive">김민경입니다.</p>
+                            <p class="send">세상과 소통하는 디자이너가 되기 위해 꾸준히 노력하고 있습니다.</p>
+                            <p class="receive">저의 대해서 궁금하시다면 지금 콘텐츠를 확인해보세요. </p>
                             <p class="receive"><img src="https://blog.kakaocdn.net/dn/bBDR3G/btqWn2ACh0q/Jie1FADC2F7YyWVkb5tYX1/img.png" alt=""></p>
                             <p class="send">
                                 <i class="fa-solid fa-user"></i>
@@ -247,7 +247,7 @@
                                 <div class="pj-img" id="pj-img5"></div>
                                 <div class="pj-explain">
                                     <div class="pj-ex-title1">
-                                        <p>Etc. </p>
+                                        <p>Design Project. </p>
 
                                     </div>
                                     <div class="pj-ex-title2">
@@ -750,7 +750,7 @@
                         <i class="fa-solid fa-square-xmark"></i>
                     </p>
 
-                    <p>Etc.</p>
+                    <p>Design Project.</p>
                 </div>
                 <div class="con">
                     <div class="inner-con">
@@ -920,7 +920,7 @@
                     </li>
                     <li><a href="https://minkyung05.github.io/avatar_group_pj_new/" target="_blank">Avatar II</a></li>
                     <li><a a href="https://www.behance.net/?tracking_source=nav20"
-                        target="_blank">Etc.</a></li>
+                        target="_blank">Design Project.</a></li>
                     <li><a>Instagram</a></li>
                     <li><a>Facebook</a> </li>
                     <li><a>Blog</a></li>
